feat(CategoryServiceTest): add getCategoryByIdNotExisting test